--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-python-telegram-bot==13.15
+Flask
 requests
-beautifulsoup4
-Flask==2.3.3
-Werkzeug==2.3.9
-gunicorn==20.1.0
+python-telegram-bot
+pytz
+gunicorn
